--- a/tests/cert-tests/template-utf8.tmpl
+++ b/tests/cert-tests/template-utf8.tmpl
@@ -25,3 +25,11 @@ policy1 = 1.3.6.1.4.1.5484.1.10.99.1.0
 policy1_txt = "Μια πολιτική που θέλει διάβασμα"
 policy1_url = http://www.example.com/a-policy-to-read
 
+policy2 = 1.3.6.1.4.1.5484.1.10.99.1.1
+policy2_txt = "Another policy"
+policy2_url = http://www.example.com/another-policy-to-read
+
+policy3 = 1.3.6.1.4.1.5484.1.10.99.1.2
+policy3_txt = "More policies"
+policy3_url = http://example.com/a-policy-to-read
+
